Adding LIGHTIFY Dimming Switch and renaming lutron aurona driver

--- a/zigbee-dimmer-remote2/profiles/switch-battery-level.yml
+++ b/zigbee-dimmer-remote2/profiles/switch-battery-level.yml
@@ -1,4 +1,4 @@
-name: switch-level-button
+name: switch-battery-level
 components:
   - id: main
     capabilities:
@@ -6,7 +6,7 @@ components:
       version: 1
     - id: switchLevel
       version: 1
-    - id: button
+    - id: battery
       version: 1
     - id: refresh
       version: 1
