--- a/zigbee-dimmer-remote2/profiles/switch-level-button.yml
+++ b/zigbee-dimmer-remote2/profiles/switch-level-button.yml
@@ -10,5 +10,7 @@ components:
       version: 1
     - id: refresh
       version: 1
+    - id: battery
+      version: 1
     categories:
     - name: RemoteController
