--- a/zigbee-light-multifunction/fingerprints.yml
+++ b/zigbee-light-multifunction/fingerprints.yml
@@ -14,6 +14,11 @@ zigbeeManufacturer:
     manufacturer: OSRAM
     model: LIGHTIFY BR Tunable White
     deviceProfileName: level-colortemp-2700-6500
+  - id: "OSRAM/LIGHTIFY BR RGBW"
+    deviceLabel: OSRAM LIGHTIFY BR RGBW
+    manufacturer: OSRAM
+    model: LIGHTIFY BR RGBW
+    deviceProfileName: rgbw-level-colortemp-2700-6500
   - id: "Ecosmart-ZBT-A19-CCT"
     deviceLabel: Ecosmart-ZBT
     manufacturer: The Home Depot
