--- a/zigbee-dimmer-remote/fingerprints.yml
+++ b/zigbee-dimmer-remote/fingerprints.yml
@@ -30,8 +30,8 @@ zigbeeManufacturer:
     model: 3131-G
     deviceProfileName: switch-battery-level
   #IKEA of Sweden
-  - id: "OSRAM/TRADFRI wireless dimmer"
-    deviceLabel: "OSRAM"
+  - id: "OSRAM/LIGHTIFY Dimming Switch"
+    deviceLabel: "OSRAM LIGHTIFY Dimming Switch"
     manufacturer: OSRAM
     model: LIGHTIFY Dimming Switch
     deviceProfileName: switch-battery-level
